# talk2agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  start-codex-loop.ps1
.github/workflows/: harness.yml
docs/: harness.md  index.md  manual-checklist.md  operator-guide.md
docs/design-docs/: 2026-03-20-multi-provider-acp-design.md  2026-03-20-telegram-agent-controls-design.md  2026-03-26-acp-client-filesystem-design.md  2026-03-26-acp-client-terminal-design.md  2026-03-26-telegram-attachment-input-design.md  2026-03-26-telegram-command-center-design.md  2026-03-26-telegram-context-bundle-design.md  2026-03-26-telegram-last-request-trace-design.md  2026-03-26-telegram-last-turn-trace-design.md  2026-03-26-telegram-plan-trace-design.md  2026-03-26-telegram-provider-sessions-design.md  2026-03-26-telegram-session-fork-design.md  2026-03-26-telegram-session-info-design.md  2026-03-26-telegram-tool-activity-trace-design.md  2026-03-26-telegram-turn-cancel-design.md  2026-03-26-telegram-workspace-browser-design.md  index.md  (+4 more)
talk2agent/: __init__.py  app.py  cli.py  config.py  harness.py  provider_runtime.py  session_history.py  session_store.py  workspace_files.py  workspace_git.py  workspace_inbox.py
tests/: ptb_telegram_helpers.py  test_agent_session.py  test_app.py  test_bot_client.py  test_cli_smoke.py  test_config.py  test_harness.py  test_permission.py  test_provider_runtime.py  test_session_history.py  test_session_store.py  test_telegram_bot.py  test_telegram_stream.py  test_workspace_files.py  test_workspace_git.py  test_workspace_inbox.py
(+15 files in other folders)
